# service-oa-records

./: .dockerignore  .env-docker  .env-local  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  justfile  pygeoapi-config.yml  pygeoapi-openapi.yml  pyproject.toml  renovate.json
.zed/: debug.json
config-files/: logging-conf-otel.yaml  logging-conf.yaml
pygeoapi-swissgeo-extensions/: app.py  aws4auth.py  swissgeo_provider.py
scripts/: create-opensearch-indexes.py  load-opensearch-catalogue.py  load-sample-records.py  opensearch-index-mapping-geoadmin-services.json  opensearch-index-mapping-swissgeo-catalog.json  opensearch-index-mapping-swissgeo-distributions.json
static-s3/api/oar/v0/: OSM-Bright-LV95.json.en  collections.de  conformance.en
tests/: test_swissgeo_provider.py
v0/oar/v0/: landingpage  tiles.json.en
v0/oar/v0/collections/: ch.agroscope.abschaetzung-organische_boeden.de  ch.agroscope.amphibien-ausbreitungskarten_alytes_obstetricans.de  ch.agroscope.amphibien-ausbreitungskarten_alytes_obstetricans.fr  ch.agroscope.amphibien-ausbreitungskarten_bombia_variegata.de  ch.agroscope.amphibien-ausbreitungskarten_bombia_variegata.en  ch.agroscope.amphibien-ausbreitungskarten_epidalea_calamita.en  ch.agroscope.amphibien-ausbreitungskarten_epidalea_calamita.fr  ch.agroscope.amphibien-ausbreitungskarten_epidalea_calamita.it  ch.agroscope.amphibien-ausbreitungskarten_triturus_cristatus.it  ch.agroscope.amphibien-bedeutung_parzellen.de  ch.agroscope.amphibien-bedeutung_parzellen.en  ch.agroscope.feuchtflaechenpotential-kulturlandschaft.en  ch.agroscope.feuchtflaechenpotential-kulturlandschaft.it  ch.agroscope.fokuskarte-voegel.fr  ch.agroscope.fokuskarte-voegel.it  ch.agroscope.korridore-feuchtgebietsarten_bereiche.en  ch.agroscope.korridore-feuchtgebietsarten_bereiche.fr  ch.agroscope.korridore-feuchtgebietsarten_bereiche.it  ch.agroscope.korridore-feuchtgebietsarten_qualitaet.de  ch.agroscope.korridore-feuchtgebietsarten_qualitaet.en  ch.agroscope.korridore-feuchtgebietsarten_qualitaet.fr  ch.are.agglomerationsverkehr.de  ch.are.agglomerationsverkehr.en  ch.are.alpenkonvention.en  ch.are.alpenkonvention.it  ch.are.bauzonen.en  ch.are.bauzonen.fr  ch.are.bauzonen.it  ch.are.belastung-personenverkehr-bahn.de  ch.are.belastung-personenverkehr-bahn.en  ch.are.belastung-personenverkehr-bahn_zukunft.de  ch.are.belastung-personenverkehr-bahn_zukunft.it  ch.are.belastung-personenverkehr-strasse.en  ch.are.belastung-personenverkehr-strasse.it  ch.are.belastung-personenverkehr-strasse_zukunft.de  ch.are.belastung-personenverkehr-strasse_zukunft.it  ch.are.erreichbarkeit-miv.de  ch.are.erreichbarkeit-miv.en  ch.are.erreichbarkeit-miv.it  ch.are.erreichbarkeit-oev.en  (+1820 more)
(+17301 files in other folders)
