[project]
name = "service-oaf-pygeoadmin"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "pygeoapi",
    "tinydb",
    "opensearch-py",
    "opensearch-dsl",
    "requests-aws4auth",
    "boto3",
    "packaging>=26.0",
    "uvicorn[standard]",
    "starlette",
]

[tool.ty.environment]
extra-paths = ["pygeoapi-swissgeo-extensions"]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
